setting hight on social div to avoid jump when icons are loaded

--- a/client/styles/app.less
+++ b/client/styles/app.less
@@ -168,6 +168,7 @@ body, .map-section {
 }
 
 .social {
+	height: 35px;
 	float: right;
 	@media (min-width: @screen-sm-min){
 		margin-top: -30px;
@@ -275,10 +276,6 @@ body, .map-section {
   border-left: 6px solid transparent;
   content: '';
 }
-
-
-
-
 
 //landing page
 
